--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="/assets/css/animate.min.css">
 <link rel="stylesheet" href="/assets/css/pygments/pygments_{{ site.pygmentsTheme }}.css">
 <link rel="stylesheet" href="/assets/css/github-markdown.css">
+<link rel-"alternate" type="application/ato_xml" title="{{ site.title }}" href="/feed.xml">
 <!-- SNS-icon -->
 <script src="//at.alicdn.com/t/font_856428_y9z6nq7zf5.js"></script>
 <!-- share.css -->
